--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "browser-router": "^0.2.0",
+    "material": "^0.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
+    "ui": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
