--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://romanerobb.github.io/robbchris",
   "name": "robbc",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
