--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://romanerobb.github.io/robbchris",
+  "homepage": "https://romanerobb.github.io/robbchris/",
   "name": "robbc",
   "version": "0.1.0",
   "private": false,
