--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "browser-router": "^0.2.0",
+    "express": "^4.19.1",
+    "loaders.css": "^0.1.2",
     "material": "^0.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^3.0.1",
     "ui": "^0.2.4",
