--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "material": "^0.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "ui": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
     "gh-pages": "^6.1.1"
   }
 }
